--- a/k8s/users-api-deployment.yaml
+++ b/k8s/users-api-deployment.yaml
@@ -4,7 +4,12 @@ metadata:
   name: users-api
   namespace: microservice-app
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: users-api
@@ -12,12 +17,30 @@ spec:
     metadata:
       labels:
         app: users-api
+        version: v1
     spec:
       containers:
         - name: users-api
           image: chechoiot/users-api:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8083
+          resources:
+            requests:
+              cpu: 50m
+              memory: 256Mi
+            limits:
+              cpu: 500m
+              memory: 1Gi
+          readinessProbe:
+            tcpSocket:
+              port: 8083
+            initialDelaySeconds: 15
+            periodSeconds: 5
+          livenessProbe:
+            tcpSocket:
+              port: 8083
+            initialDelaySeconds: 30
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
@@ -28,6 +51,6 @@ spec:
   selector:
     app: users-api
   ports:
-    - port: 8080
-      targetPort: 8080
-
+    - name: http
+      port: 8080
+      targetPort: 8083
